ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class:nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: graylog-server-service
                servicePort: 9000
            - path: /email/
              backend:
                serviceName: email-notification-service
                servicePort: 8080
            - path: /elasticsearch/
              backend:
                serviceName: elasticsearch-service
                servicePort: 9200
